# PongPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Include/: Actor.h  BGSpriteComponent.h  Ball.h  Component.h  Cust_Math.h  Game.h  Paddle.h  PaddleSpriteComponent.h  SpriteComponent.h  UI.h
Pong++/: Actor.cpp  AnimSpriteComponent.cpp  AnimSpriteComponent.h  Component.cpp  Game.h  Main.cpp  Paddle.h  SpriteComponent.cpp
src/: AnimSpriteComponent.cpp  BGSpriteComponent.h  Ball.cpp  Cust_Math.cpp  Game.cpp  Paddle.cpp  PaddleSpriteComponent.cpp  SpriteComponent.h  UI.cpp
